fcntl.2: srcfix: Add some FIXMEs
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1377,6 +1377,7 @@ with the
 .B O_TRUNC
 flag and
 .BR ftruncate (2).
+.\" FIXME and also truncate(2)?
 Those calls will fail with
 .B EPERM
 if you try to shrink the file in question.
@@ -1388,6 +1389,7 @@ This affects
 .BR write (2)
 if you write across size boundaries,
 .BR ftruncate (2),
+.\" FIXME and also truncate(2)?
 and
 .BR fallocate (2).
 These calls will fail with
