--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1338,8 +1338,8 @@ to the set of seals of the inode referred to by the file descriptor
 Seals cannot be removed again.
 Once this call succeeds, the seals are enforced by the kernel immediately.
 If the current set of seals includes
-.BR F_SEAL_SEAL ,
-then this call will be rejected with
+.BR F_SEAL_SEAL
+(see below), then this call will be rejected with
 .BR EPERM .
 Adding a seal that is already set is a no-op, in case
 .B F_SEAL_SEAL
