--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1413,7 +1413,7 @@ still possible and allowed.
 .\"
 .\"       Shrinking the file by 100 bytes using ftruncate(), and then
 .\"       increasing the fil size by 100 bytes, which would have the
-.\"       effect of replacing the last hyndred bytes by zeros, IS permitted.
+.\"       effect of replacing the last hundred bytes by zeros, IS permitted.
 .\"
 .\"       Either my understanding is incorrect, or the above two cases
 .\"       seem anomalous. Can you comment?
