--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1416,7 +1416,7 @@ still possible and allowed.
 .\"       effect of replacing the last hundred bytes by zeros, IS permitted.
 .\"
 .\"       Either my understanding is incorrect, or the above two cases
-.\"       seem anomalous. Can you comment?
+.\"       seem a little anomalous. Can you comment?
 .\"
 Thus, this seal is normally used in combination with one of the other seals.
 This seal affects
