memfd_create.2: CONFORMING to: note that glibc support is pending
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -159,6 +159,8 @@ There was insufficient memory to create a new anonymous file.
 The
 .BR memfd_create ()
 system call first appeared in Linux 3.17.
+.\" FIXME . When glibc support appears, update the following sentence:
+Support in the GNU C library is pending.
 .SH CONFORMING TO
 The
 .BR memfd_create ()
