memfd_create.2: tfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -31,7 +31,7 @@ memfd_create \- create an anonymous file
 .BR memfd_create ()
 creates an anonymous file and returns a file descriptor that refers to it.
 The file behaves like a regular file, and so can be modified,
-truncated, memory-mapped and so on.
+truncated, memory-mapped, and so on.
 However, unlike a regular file,
 it lives in RAM and has a volatile backing storage.
 .\" FIXME In the following sentence I changed "released" to
