memfd_create.2: tfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -43,7 +43,7 @@ Anonymous memory is used for all backing pages of the file.
 Therefore, files created by
 .BR memfd_create ()
 are subject to the same restrictions as other anonymous
-.\" FIXME Can you give some examples on some of the restrictions please.
+.\" FIXME Can you give some examples of some of the restrictions please.
 memory allocations such as those allocated using
 .BR mmap (2)
 with the
