memfd_create.2: wfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -57,7 +57,7 @@ Following the call, the file size should be set using
 
 The name supplied in
 .I name
-is used as an internal filename and will appear
+is used as an internal filename and will be displayed
 .\" FIXME What does "internal" in the previous line mean?
 as the target of the corresponding symbolic link in the directory
 .\" FIXME I added the previous line. Is it correct?
