memfd_create.2: SEE ALSO updates
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -88,13 +88,14 @@ flag in
 for reasons why this may be useful.
 .TP
 .BR MFD_ALLOW_SEALING
-Allow sealing operations (see
+Allow sealing operations on this file.
+See
 .BR fcntl (2)
 with
 .B F_ADD_SEALS
 and
-.BR F_GET_SEALS )
-on this file.
+.BR F_GET_SEALS ,
+and also NOTES, below.
 The initial set of seals is empty.
 If this flag is not set, the initial set of seals will be
 .BR F_SEAL_SEAL ,
@@ -270,6 +271,8 @@ seal has not yet been applied).
 .\" FIXME Do we have any nice example program that could go in the man page?
 .SH SEE ALSO
 .BR fcntl (2),
+.BR ftruncate (2),
+.BR mmap (2),
 .\" FIXME Why the reference to shmget(2) in particular (and not,
-.\"       e.g., shm_open(3), mmap(2))?
+.\"       e.g., shm_open(3))?
 .BR shmget (2)
