--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1412,7 +1412,7 @@ still possible and allowed.
 .\"       NOT be permitted.
 .\"
 .\"       Shrinking the file by 100 bytes using ftruncate(), and then
-.\"       increasing the fil size by 100 bytes, which would have the
+.\"       increasing the file size by 100 bytes, which would have the
 .\"       effect of replacing the last hundred bytes by zeros, IS permitted.
 .\"
 .\"       Either my understanding is incorrect, or the above two cases
