--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1408,12 +1408,13 @@ still possible and allowed.
 .\" FIXME So, just to confirm my understanding of the previous sentence:
 .\"       Given a file with the F_SEAL_WRITE seal set, then:
 .\"
-.\"       Writing zeros into (say) the last 100 bytes of the file is
-.\"       NOT be permitted.
+.\"       * Writing zeros into (say) the last 100 bytes of the file is
+.\"         NOT be permitted.
 .\"
-.\"       Shrinking the file by 100 bytes using ftruncate(), and then
-.\"       increasing the file size by 100 bytes, which would have the
-.\"       effect of replacing the last hundred bytes by zeros, IS permitted.
+.\"       * Shrinking the file by 100 bytes using ftruncate(), and then
+.\"         increasing the file size by 100 bytes, which would have the
+.\"         effect of replacing the last hundred bytes by zeros, IS
+.\"         permitted.
 .\"
 .\"       Either my understanding is incorrect, or the above two cases
 .\"       seem a little anomalous. Can you comment?
