fcntl.2: Minor rewording
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1311,14 +1311,14 @@ on this file from now on.
 The file is said to be sealed.
 The default set of seals depends on the type of the underlying
 file and filesystem.
+For an overview of file sealing, a discussion of its purpose,
+and some code examples, see
+.BR memfd_create (2).
 
 .\" FIXME I changed "shmem" to "tmpfs" in the next sentence. Okay?
 Currently, only the
 .I tmpfs
 filesystem supports sealing.
-(See
-.BR memfd_create (2)
-for a discussion of the uses of sealing.)
 On other filesystems, all
 .BR fcntl (2)
 operations that operate on seals will return
