memfd_create.2: wfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -260,9 +260,10 @@ The second process then maps the file using
 The second process uses the
 .BR fcntl (2)
 .B F_GET_SEALS
-operation to retrieve the set of seals that has been applied to the file.
-This set can be inspected in order to determine what kinds of restrictions
-have been placed on file modifications.
+operation to retrieve the bit mask of seals
+that has been applied to the file.
+This bit mask can be inspected in order to determine
+what kinds of restrictions have been placed on file modifications.
 If desired, the second process can apply further seals
 to impose additional restrictions (so long as the
 .BR F_SEAL_SEAL
