memfd_create.2: wfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -68,7 +68,7 @@ The displayed name is always prefixed with
 and serves only for debugging purposes.
 Names do not affect the behavior of the memfd,
 .\" FIXME The term "memfd" appears here without having previously been
-.\"       defined. Would the correct definition "the memfd" be
+.\"       defined. Would the correct definition of "the memfd" be
 .\"       "the file descriptor created by memfd_create"?
 and as such multiple files can have the same name without any side effects.
 
