memfd_create.2: tfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -185,7 +185,7 @@ used with the file-sealing APIs provided by
 In the absence of file sealing,
 processes that communicate via shared memory must either trust each other,
 or take measures to deal with the possibility that an untrusted peer
-may manipulate the shared memory region in problematics ways.
+may manipulate the shared memory region in problematic ways.
 For example, an untrusted peer might modify the contents of the
 shared memory at any time, or shrink the shared memory region.
 The former possibility leaves the local process vulnerable to
