memfd_create.2: wfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -89,12 +89,12 @@ for reasons why this may be useful.
 .TP
 .BR MFD_ALLOW_SEALING
 Allow sealing operations on this file.
-See
-.BR fcntl (2)
-with
+See the discussion of the
 .B F_ADD_SEALS
 and
-.BR F_GET_SEALS ,
+.BR F_GET_SEALS
+operations in
+.BR fcntl (2),
 and also NOTES, below.
 The initial set of seals is empty.
 If this flag is not set, the initial set of seals will be
