--- a/man2/futex.2
+++ b/man2/futex.2
@@ -107,7 +107,7 @@ The operation to execute is passed via the
 argument, along with a value
 .IR val .
 .PP
-Five operations are currently defined:
+The following operations are currently defined:
 .TP
 .B FUTEX_WAIT
 This operation atomically verifies that the futex address
