futex.2: Note that 'op' argument consists of two parts: operation + options
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -107,7 +107,16 @@ The operation to execute is passed via the
 argument, along with a value
 .IR val .
 .PP
-The following operations are currently defined:
+The
+.I op
+argument consists of two parts:
+a command that specifies the operation to be performed,
+bit-wise ORed with zero or or more options that
+modify the behaviour of the operation.
+.PP
+The operation specified in
+.I op
+is one of the following:
 .TP
 .B FUTEX_WAIT
 This operation atomically verifies that the futex address
