futex.2: Document FUTEX_PRIVATE_FLAG
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -113,6 +113,18 @@ argument consists of two parts:
 a command that specifies the operation to be performed,
 bit-wise ORed with zero or or more options that
 modify the behaviour of the operation.
+The options that may be included in
+.I op
+are as follows:
+.TP
+.BR FUTEX_PRIVATE_FLAG " (since Linux 2.6.22)"
+.\" commit 34f01cc1f512fa783302982776895c73714ebbc2
+This option bit can be employed with all futex operations.
+It tells the kernel that the futex is process private and not shared
+with another process.
+This allows the kernel to choose the fast path for validating
+the user-space address and avoids expensive VMA lookups,
+taking reference counts on file backing store, and so on.
 .PP
 The operation specified in
 .I op
