futex.2: Document FUTEX_CLOCK_REALTIME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -125,6 +125,25 @@ with another process.
 This allows the kernel to choose the fast path for validating
 the user-space address and avoids expensive VMA lookups,
 taking reference counts on file backing store, and so on.
+.TP
+.BR FUTEX_CLOCK_REALTIME " (since Linux 2.6.28)"
+.\" commit 1acdac104668a0834cfa267de9946fac7764d486
+This option bit can be employed with the
+.BR FUTEX_WAIT_BITSET
+and
+.BR FUTEX_WAIT_REQUEUE_PI
+operations (described below).
+
+If this option is set,
+the kernel treats the user space supplied timeout as an absolute
+time based on
+.BR CLOCK_REALTIME .
+
+If this option is not set,
+the kernel treats the user space supplied timeout as relative time.
+
+If this is set on any other operation than the supported ones,
+the kernel returns ENOSYS!
 .PP
 The operation specified in
 .I op
