futex.2: Add placeholders for as yet undocumented operations
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -141,9 +141,7 @@ time based on
 
 If this option is not set,
 the kernel treats the user space supplied timeout as relative time.
-
-If this is set on any other operation than the supported ones,
-the kernel returns ENOSYS!
+.\" FIXME a relative time based on what clock?
 .PP
 The operation specified in
 .I op
@@ -181,6 +179,11 @@ the futex and executes the
 .B FUTEX_WAKE
 operation.
 .TP
+.BR FUTEX_WAIT_BITSET " (since Linux 2.6.25)"
+.\" commit cd689985cf49f6ff5c8eddc48d98b9d581d9475d
+.\" FIXME TO complete
+[As yet undocumented]
+.TP
 .B FUTEX_WAKE
 This operation wakes at most \fIval\fP
 processes waiting on this futex address (i.e., inside
@@ -198,6 +201,31 @@ For
 this is executed if incrementing
 the count showed that there were waiters, once the futex value has been set
 to 1 (indicating that it is available).
+.TP
+.BR FUTEX_WAKE_OP " (since Linux 2.6.14)"
+.\" commit 4732efbeb997189d9f9b04708dc26bf8613ed721
+.\" FIXME to complete
+[As yet undocumented]
+.TP
+.BR FUTEX_WAKE_BITSET " (since Linux 2.6.25)"
+.\" commit cd689985cf49f6ff5c8eddc48d98b9d581d9475d
+.\" FIXME TO complete
+[As yet undocumented]
+.TP
+.BR FUTEX_LOCK_PI " (since Linux 2.6.18)"
+.\" commit c87e2837be82df479a6bae9f155c43516d2feebc
+.\" FIXME to complete
+[As yet undocumented]
+.TP
+.BR FUTEX_UNLOCK_PI " (since Linux 2.6.18)"
+.\" commit c87e2837be82df479a6bae9f155c43516d2feebc
+.\" FIXME to complete
+[As yet undocumented]
+.TP
+.BR FUTEX_TRYLOCK_PI " (since Linux 2.6.18)"
+.\" commit c87e2837be82df479a6bae9f155c43516d2feebc
+.\" FIXME to complete
+[As yet undocumented]
 .TP
 .BR FUTEX_FD " (present up to and including Linux 2.6.25)"
 To support asynchronous wakeups, this operation associates a file descriptor
@@ -276,6 +304,16 @@ and
 .I timeout
 are as for
 .BR FUTEX_REQUEUE .
+.TP
+.BR FUTEX_CMP_REQUEUE_PI " (since Linux 2.6.31)"
+.\" commit 52400ba946759af28442dee6265c5c0180ac7122
+.\" FIXME to complete
+[As yet undocumented]
+.TP
+.BR FUTEX_WAIT_REQUEUE_PI " (since Linux 2.6.31)"
+.\" commit 52400ba946759af28442dee6265c5c0180ac7122
+.\" FIXME to complete
+[As yet undocumented]
 .SH RETURN VALUE
 .PP
 In the event of an error, all operations return \-1, and set
