futex.2: Rework FUTEX_CLOCK_REALTIME text
And move ENOSYS diuscussion to ERRORS.

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -128,7 +128,7 @@ taking reference counts on file backing store, and so on.
 .TP
 .BR FUTEX_CLOCK_REALTIME " (since Linux 2.6.28)"
 .\" commit 1acdac104668a0834cfa267de9946fac7764d486
-This option bit can be employed with the
+This option bit can be employed only with the
 .BR FUTEX_WAIT_BITSET
 and
 .BR FUTEX_WAIT_REQUEUE_PI
@@ -423,6 +423,16 @@ The system limit on the total number of open files has been reached.
 .B ENOSYS
 Invalid operation specified in
 .IR op .
+.TP
+.B ENOSYS
+The
+.BR FUTEX_CLOCK_REALTIME
+option was specified in
+.I op ,
+but the accompanying operation was neither
+.BR FUTEX_WAIT_BITSET
+nor
+.BR FUTEX_WAIT_REQUEUE_PI .
 .TP
 .B ETIMEDOUT
 .RB ( FUTEX_WAIT )
