--- a/man2/futex.2
+++ b/man2/futex.2
@@ -156,9 +156,10 @@ still contains the value
 and sleeps awaiting
 .B FUTEX_WAKE
 on this futex address.
+
 If the
 .I timeout
-argument is non-NULL, its contents specify the duration of the wait.
+argument is non-NULL, its contents specify a relative timeout for the wait.
 (This interval will be rounded up to the system clock granularity,
 and kernel scheduling delays mean that the
 blocking interval may overrun by a small amount.)
