futex.2: srcfix: add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -372,6 +372,8 @@ Returns the number of processes woken up.
 .TP
 .B FUTEX_CMP_REQUEUE
 Returns the number of processes woken up.
+.\"
+.\" FIXME Add success returns for other operations
 .SH ERRORS
 .TP
 .B EACCES
