futex.2: Rename 'op' argument to 'futex_op'
This is a little more readable, and also helps avoid confusing
when talking about the 'op' subfield in the FUTEX_WAKE_OP
discussion.

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -59,9 +59,8 @@ futex \- fast user-space locking
 .B "#include <linux/futex.h>"
 .B "#include <sys/time.h>"
 .sp
-.BI "int futex(int *" uaddr ", int " op ", int " val \
-", const struct timespec *" timeout ,
-.br
+.BI "int futex(int *" uaddr ", int " futex_op ", int " val ,
+.BI "          const struct timespec *" timeout ,
 .BI "          int *" uaddr2 ", int " val3 );
 .\" int *? void *? u32 *?
 .fi
@@ -108,13 +107,13 @@ argument, along with a value
 .IR val .
 .PP
 The
-.I op
+.I futex_op
 argument consists of two parts:
 a command that specifies the operation to be performed,
 bit-wise ORed with zero or or more options that
 modify the behaviour of the operation.
 The options that may be included in
-.I op
+.I futex_op
 are as follows:
 .TP
 .BR FUTEX_PRIVATE_FLAG " (since Linux 2.6.22)"
@@ -147,7 +146,7 @@ measured against the
 clock.
 .PP
 The operation specified in
-.I op
+.I futex_op
 is one of the following:
 .TP
 .BR FUTEX_WAIT " (since Linux 2.6.0)"
@@ -458,13 +457,13 @@ The system limit on the total number of open files has been reached.
 .TP
 .B ENOSYS
 Invalid operation specified in
-.IR op .
+.IR futex_op .
 .TP
 .B ENOSYS
 The
 .BR FUTEX_CLOCK_REALTIME
 option was specified in
-.I op ,
+.I futex_op ,
 but the accompanying operation was neither
 .BR FUTEX_WAIT_BITSET
 nor
@@ -475,7 +474,7 @@ nor
 The operation timed out.
 .TP
 .B EWOULDBLOCK
-.I op
+.I futex_op
 was
 .BR FUTEX_WAIT
 and the value pointed to by
