--- a/man2/futex.2
+++ b/man2/futex.2
@@ -306,7 +306,7 @@ the kernel casts the
 value to
 .IR u32 .
 .\" FIXME What are the constraints (if any) on the values of 'val' vs
-.\" 'timeout' vs [the number of waites on 'uaddr']?
+.\" 'timeout' vs [the number of waiters on 'uaddr']?
 
 The argument
 .I val3
