futex.2: SEE ALSO: Add reference to "Futexes are tricky" by Ulrich Drepper
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -520,6 +520,10 @@ read the sources of the futex user-space library referenced below.
 .br
 .UR http://kernel.org\:/doc\:/ols\:/2002\:/ols2002-pages-479-495.pdf
 .UE
+
+\fIFutexes Are Tricky\fP (updated in 2011), Ulrich Drepper
+.UR http://www.akkadia.org/drepper/futex.pdf
+.UE
 .PP
 Futex example library, futex-*.tar.bz2 at
 .br
