futex.7: Note that a futex is 4 bytes on all platforms
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/futex.7
+++ b/man7/futex.7
@@ -44,6 +44,7 @@ futexes are also optimized for this situation.
 .PP
 In its bare form, a futex is an aligned integer which is
 touched only by atomic assembler instructions.
+This integer is four bytes long on all platforms.
 Processes can share this integer using
 .BR mmap (2),
 via shared memory segments, or because they share memory space,
