futex.7: Minor fix: futexes can also be shared between threads
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/futex.7
+++ b/man7/futex.7
@@ -31,7 +31,7 @@ instead rely on system libraries built on them,
 such as the NPTL pthreads implementation.
 .PP
 A futex is identified by a piece of memory which can be
-shared between different processes.
+shared between processes or threads.
 In these different processes, the futex need not have identical addresses.
 In its bare form, a futex has semaphore semantics;
 it is a counter that can be incremented and decremented atomically;
