signal.7: FUTEX_WAIT_BITSET is also restartable
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/signal.7
+++ b/man7/signal.7
@@ -698,6 +698,9 @@ and
 (since Linux 2.6.22; beforehand, always failed with
 .BR EINTR ).
 .IP *
+.BR futex (2)
+.BR FUTEX_WAIT_BITSET .
+.IP *
 POSIX semaphore interfaces:
 .BR sem_wait (3)
 and
