futex.7: Note some other locking primitives that are built with futexes
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/futex.7
+++ b/man7/futex.7
@@ -21,7 +21,8 @@ The Linux kernel provides futexes ("Fast user-space mutexes")
 as a building block for fast user-space
 locking and semaphores.
 Futexes are very basic and lend themselves well for building higher-level
-locking abstractions such as POSIX mutexes.
+locking abstractions such as
+mutexes, condition variables, read-write locks, barriers, and semaphores.
 .PP
 This page does not set out to document all design decisions
 but restricts itself to issues relevant for
