--- a/man2/futex.2
+++ b/man2/futex.2
@@ -720,7 +720,7 @@ Invalid operation specified in
 The
 .BR FUTEX_CLOCK_REALTIME
 option was specified in
-.I futex_op ,
+.IR futex_op ,
 but the accompanying operation was neither
 .BR FUTEX_WAIT_BITSET
 nor
