--- a/man2/futex.2
+++ b/man2/futex.2
@@ -663,12 +663,12 @@ The
 argument is handled as described in
 .BR FUTEX_WAIT .
 
-The arguments
+The
 .IR uaddr2 ,
 .IR val ,
 and
 .IR val3
-are ignored.
+arguments are ignored.
 .TP
 .BR FUTEX_UNLOCK_PI " (since Linux 2.6.18)"
 .\" commit c87e2837be82df479a6bae9f155c43516d2feebc
@@ -817,6 +817,11 @@ is invalid.
 .TP
 .B EINVAL
 Invalid argument.
+.TP
+.BR ENOMEM
+.RB ( FUTEX_LOCK_PI ,
+.BR FUTEX_TRYLOCK_PI )
+The kernel could not allocate memory to hold state information.
 .TP
 .B ENFILE
 .RB ( FUTEX_FD )
