--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1008,3 +1008,6 @@ Futex example library, futex-*.tar.bz2 at
 .br
 .UR ftp://ftp.kernel.org\:/pub\:/linux\:/kernel\:/people\:/rusty/
 .UE
+.\"
+.\" FIXME Are there any other resources that should be listed
+.\"       in the SEE ALSO section?
