--- a/man2/futex.2
+++ b/man2/futex.2
@@ -776,8 +776,8 @@ Returns the number of processes woken up.
 Returns 0 if the futex was successfully locked.
 .TP
 .B FUTEX_TRYLOCK_PI
-.\" FIXME
-[TBC]
+.\" FIXME Is the following correct?
+Returns 0 if the futex was successfully locked.
 .TP
 .B FUTEX_UNLOCK_PI
 .\" FIXME
