strtok.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strtok.3
+++ b/man3/strtok.3
@@ -176,7 +176,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR strtok ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:strtok
 T{
 .BR strtok_r ()
 T}	Thread safety	MT-Safe
