ttyname.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ttyname.3
+++ b/man3/ttyname.3
@@ -81,7 +81,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR ttyname ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:ttyname
 T{
 .BR ttyname_r ()
 T}	Thread safety	MT-Safe
