getdate.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getdate.3
+++ b/man3/getdate.3
@@ -203,10 +203,10 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR getdate ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:getdate env locale
 T{
 .BR getdate_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe env locale
 .TE
 .SH CONFORMING TO
 POSIX.1-2001.
