getpass.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getpass.3
+++ b/man3/getpass.3
@@ -103,7 +103,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR getpass ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe term
 .TE
 .SH CONFORMING TO
 Present in SUSv2, but marked LEGACY.
