--- a/man3/fcloseall.3
+++ b/man3/fcloseall.3
@@ -62,7 +62,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR fcloseall ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:streams
 .TE
 .PP
 The
