ptsname.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ptsname.3
+++ b/man3/ptsname.3
@@ -86,7 +86,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR ptsname ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:ptsname
 T{
 .BR ptsname_r ()
 T}	Thread safety	MT-Safe
