wctomb.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/wctomb.3
+++ b/man3/wctomb.3
@@ -91,7 +91,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR wctomb ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race
 .TE
 .SH CONFORMING TO
 C99.
