crypt.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/crypt.3
+++ b/man3/crypt.3
@@ -181,7 +181,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR crypt ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:crypt
 T{
 .BR crypt_r ()
 T}	Thread safety	MT-Safe
