encrypt.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/encrypt.3
+++ b/man3/encrypt.3
@@ -132,7 +132,7 @@ Interface	Attribute	Value
 T{
 .BR encrypt (),
 .BR setkey ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:crypt
 T{
 .BR encrypt_r (),
 .BR setkey_r ()
