--- a/man3/exit.3
+++ b/man3/exit.3
@@ -97,7 +97,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR exit ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:exit
 .TE
 .PP
 The
