a64l.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/a64l.3
+++ b/man3/a64l.3
@@ -70,7 +70,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR l64a ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:l64a
 T{
 .BR a64l ()
 T}	Thread safety	MT-Safe
