stdarg.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/stdarg.3
+++ b/man3/stdarg.3
@@ -236,10 +236,12 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR va_start (),
-.BR va_arg (),
 .BR va_end (),
 .BR va_copy ()
 T}	Thread safety	MT-Safe
+T{
+.BR va_arg ()
+T}	Thread safety	MT-Safe race:ap
 .TE
 .SH CONFORMING TO
 The
